--- a/repos/PII_Pipes_Filters_Start/.vscode/tasks.json
+++ b/repos/PII_Pipes_Filters_Start/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/repos/PII_Pipes_Filters_Start/src/Program/Program.csproj",
+                "${workspaceFolder}/src/Program/Program.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/repos/PII_Pipes_Filters_Start/src/Program/Program.csproj",
+                "${workspaceFolder}/src/Program/Program.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -32,7 +32,7 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/repos/PII_Pipes_Filters_Start/src/Program/Program.csproj",
+                "${workspaceFolder}/src/Program/Program.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
